--- a/style.css
+++ b/style.css
@@ -34,3 +34,25 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/* Contenedor de Imagen */
+.image-container {
+  margin: 10px 30%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-top: 10px;
+}
+
+/* Media queries for large smartphones | Esto es para que a pantallas menores a 600px se apliquen los siguientes estilos */ 
+@media screen and (max-width: 600px) {
+
+  h1 {
+    font-size: 20px;
+  }
+  .image-container{
+    margin: 10px;
+    
+  }
+}
